apps/test-4/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-4-staging
  labels:
    platform.swhurl.com/managed: 'true'
    platform.swhurl.com/app: test-4
    platform.swhurl.com/environment: staging
    platform.swhurl.com/exposure: authenticated-web
    platform.swhurl.com/team: platform
