apps/test-4/staging/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-4
  namespace: test-4-staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: test-4
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8080
      protocol: TCP
